# wtf

./: .gitignore  .hadoop_client_hosts  .hadoop_data_hosts  .hyperdex_daemon_hosts  .syscluster  .wtf_client_hosts  .wtf_daemon_hosts  AUTHORS  LICENSE  Makefile.am  README  abstract  cdf.gnuplot  configure.ac  hyperdex-daemon-20140823-224019.18883  replicant-daemon-20140823-224151.2121  tput.gnuplot  umm.sh  visibility.h  wtf-admin.pc.in  wtf-client.pc  wtf-client.pc.in  wtf-fuse  wtf-test-blockstore  wtf.cc  wtf.pc.in
admin/: admin.cc  admin.h  c.cc  constants.h  coord_rpc.cc  coord_rpc.h  coord_rpc_generic.cc  coord_rpc_generic.h  multi_yieldable.cc  multi_yieldable.h  pending.cc  pending.h  pending_string.cc  pending_string.h  raw_backup.cc  yieldable.cc  yieldable.h
benchmarks/: hadoop-benchmark.cc  writetest.cc  wtfio-checker.cc  wtfio.cc
bindings/fuse/: fusewtf.cc
bindings/java/: .gitignore  Main.java  compile.sh  org_wtf_client_ByteString.h  org_wtf_client_Client.c  org_wtf_client_Client.definitions.c  org_wtf_client_Client.h  org_wtf_client_Deferred.h  org_wtf_client_Iterator.h  test.i  wtf_client.i
bindings/java/org/wtf/client/: ByteString.java  Client.java  Deferred.java  Iterator.java  Operation.java  WTFClientException.java
blockstore/: blockmap.cc  blockmap.h  disk.cc  disk.h  vblock.cc  vblock.h
client/: block.cc  block.h  buffer_descriptor.cc  buffer_descriptor.h  c.cc  client.cc  client.h  command.cc  command.h  constants.h  coordinator_link.cc  coordinator_link.h  file.cc  file.h  file2.cc  file2.h  message.h  message_hyperdex_condput.cc  message_hyperdex_condput.h  message_hyperdex_del.cc  message_hyperdex_del.h  message_hyperdex_get.cc  message_hyperdex_get.h  message_hyperdex_put.cc  message_hyperdex_put.h  message_hyperdex_search.cc  message_hyperdex_search.h  pending.cc  pending.h  pending_aggregation.cc  pending_aggregation.h  pending_chdir.cc  pending_chdir.h  pending_chmod.cc  pending_chmod.h  pending_creat.cc  pending_creat.h  pending_del.cc  pending_del.h  pending_getattr.cc  (+20 more)
common/: block.cc  block.h  block_id.cc  block_id.h  block_location.cc  block_location.h  chain_node.cc  chain_node.h  configuration.cc  configuration.h  configuration_flags.h  coordinator_link.cc  coordinator_link.h  coordinator_returncode.cc  coordinator_returncode.h  ids.cc  ids.h  interval_map.cc  interval_map.h  interval_test.cc  macros.h  mapper.cc  mapper.h  network_msgtype.cc  network_msgtype.h  packing.cc  packing.h  response_returncode.cc  response_returncode.h  serialization.cc  serialization.h  server.cc  server.h  special_objects.h  wtf_node.cc  wtf_node.h
coordinator/: coordinator.cc  coordinator.h  missing_acks.h  server_barrier.cc  server_barrier.h  server_state.h  symtable.c  transitions.cc  transitions.h  util.h
daemon/: block_storage_manager.cc  block_storage_manager.h  blockmap.cc  blockmap.h  connection.cc  connection.h  coordinator_link.cc  coordinator_link.h  coordinator_link_wrapper.cc  coordinator_link_wrapper.h  daemon.cc  daemon.h  main.cc  request_response.h  settings.cc  settings.h
daemon/blockstore/: blockmap.cc  disk.h
hadoop/: WTFFileSystem.java
include/wtf/: admin.h  admin.hpp  client.h  client.hpp
paper/: Makefile  template.tex
realpath/: realpath  realpath.c
test/: appendtest  appendtest.cc  chdir_test.cc  closetest.cc  env.sh  getattr_test.cc  lseek_test.cc  lseektest  lseektest.cc  lseektest2  lseektest2.cc  readdir-test  readdir_test.cc  readwrite_stress_test.cc  readwrite_sync_stress_test.cc  runner.py  test.cc  test_blockstore.cc  truncatetest.cc
test/java/: Basic.java
test/sh/: appendtest.sh  bindings.java.Basic.sh  chdir_test.sh  closetest.sh  getattr_test.sh  lseektest.sh  lseektest2.sh  readdir_test.sh  readwrite.basic.sh  readwrite_sync_stress_test.2GB.sh  readwrite_sync_stress_test.basic.sh  truncatetest.sh
tests/: test_blockstore.cc  test_readwrite.cc
tools/: async-benchmark.cc  backup.cc  benchmark.cc  benchmark.sh  cli.cc  common.h  coordinator.cc  delspace.py  fusetest.c  fusetest.cc  fusewtf.cc  fusewtf.h  hadoop-benchmark.cc  hadoop-benchmark.sh  hyperdex_clear.py  hyperdex_dump.py  initialize-cluster.cc  master.py  mkfs.cc  readtest.cc  readwritetest.cc  readwritetest.sh  rereplicate.cc  server-forget.cc  server-kill.cc  server-offline.cc  server-online.cc  server-register.cc  shelltest.cc  startcluster.sh  startlocal.sh  startup.sh  stat.cc  stopcluster.sh  sync-benchmark.cc  testarmnod.cc  writetest.cc
